--- a/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
@@ -12,7 +12,7 @@
 <div class="card">
     <div class="card-header bg-dark">
         <h5 class="card-title text-white">
-            General Tools
+            General Tools 
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
@@ -21,12 +21,17 @@
     @MyHtmlHelpers.EquiLink("/Welding/WM/TV", "far fa-file-alt", "TV", helperText: "Qis system, live weldfaults factory, online timers")
 
     <p></p>
-    @MyHtmlHelpers.EquiLink("/Welding/WM/_TimerBreakdownDatachange", "far fa-file-alt", "TimerBreakdownDatachange", helperText: "All TimerBreakDowns with datachange WM")
-    
+    @MyHtmlHelpers.EquiLink("/Welding/WM/", "far fa-file-alt", "Welding Master Interventions ---underconstruction---", helperText: "List up a intervention")
+
     <p></p>
-    @MyHtmlHelpers.EquiLink("/Welding/WM/_QstopWarnings", "far fa-file-alt", "QstopWarning ---under construction---", helperText: "Pro Actief Qstops vermijden")
+    @MyHtmlHelpers.EquiLink("/Welding/WM/", "far fa-file-alt", "QstopAlerts ---under construction---", helperText: "Pro Actief Qstops vermijden TOP ")
     <p></p>
-    @MyHtmlHelpers.EquiLink("/Welding/WM/_SpatterData", "far fa-file-alt", "SpatterWarning ---under construction---", helperText: "Pro Actief vermijden van Spatters")
+    @MyHtmlHelpers.EquiLink("/Welding/WM/", "far fa-file-alt", "SpatterAlerts ---under construction---", helperText: "Spatters met melding productie ")
+    <p></p>
+    @MyHtmlHelpers.EquiLink("/Welding/WM/", "far fa-file-alt", " All D alerts ---under construction---", helperText: "Follow up all D alerts")
+    <p></p>
+    @MyHtmlHelpers.EquiLink("/Welding/WM/", "far fa-file-alt", " All Q Alerts ---under construction---", helperText: "Follow ip all Q alerts ")
+
 
     @*voorbeeld interne link*@
     <p>
@@ -38,6 +43,11 @@
 
         <a href="~/Welding/WM/_WeldFaultprotocol" class="btn btn-primary btn-sm">WeldFaultAnalyse Top10 langste storingen &raquo;</a>
         Weldfaultprotocol ---under contruction---
+    <p>
+    <p>
+
+        <a href="~/Welding/WM/_TimerBreakdownDatachange" class="btn btn-primary btn-sm">TimerBreakdownDatachange &raquo;</a>
+        All TimerBreakDowns with datachange WM
     </p>
 
 </div>
@@ -46,7 +56,7 @@
 <div class="card">
     <div class="card-header bg-dark">
         <h5 class="card-title text-white">
-            Data Tools
+            Data Tools ---under construction---
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up  fa-rotate-180 fa-1"></i></span>
         </h5>
     </div>
@@ -55,12 +65,72 @@
         <p></p>
 
         @MyHtmlHelpers.EquiLink("/Welding/Launch", "far fa-file-alt", "Tools for Launch activity", helperText: "launch data")
+        <p>
+        <p>
+            <a href="~//Welding/WM/" class="btn btn-primary btn-sm">WeldingTool &raquo;</a>
+            All info about a WeldSpot
+        </p>
+        <p>
+        <p>
+            <a href="~//Welding/WM/" class="btn btn-primary btn-sm">LastWeld &raquo;</a>
+            Search the last weld of a Weldspot
+        <p>
+        <p>
+            <a href="~//Welding/WM/" class="btn btn-primary btn-sm">Optimalisation Tool &raquo;</a>
+            Search for parameters with the same plateCombination
+        <p>
+        <p>
+            <a href="~//Welding/WM/" class="btn btn-primary btn-sm">Dress Tool &raquo;</a>
+            Analyse ABB Dress Data
+        <p>
+        <p>
+            <a href="~//Welding/WM/" class="btn btn-primary btn-sm">Data change Weldtimers &raquo;</a>
+            Analyse WeldTimer Data Change only
 
         <p></p>
-
-
-
     </div>
     <p></p>
+
+    <div class="card">
+        <div class="card-header bg-dark">
+            <h5 class="card-title text-white">
+                Welding Master Responsibility Area ---under construction---
+                <span class="clickable float-right"><i class="fas fa-chevron-circle-up  fa-rotate-180 fa-1"></i></span>
+            </h5>
+        </div>
+        <div class="card-body" style="display:none">
+            <p>
+            <p>
+                <a href="~//Welding/WM/" class="btn btn-primary btn-sm">WeldFault Top3 &raquo;</a>
+                Analyse your Top3 WeldFault
+            <p>
+            <p>
+                <a href="~//Welding/WM/" class="btn btn-primary btn-sm">Qstop Warning Top3 &raquo;</a>
+                Analyse your Top3 QstopWarning
+            <p>
+            <p>
+                <a href="~//Welding/WM/" class="btn btn-primary btn-sm">spatter Alerts &raquo;</a>
+                Analyse your Responsibility Spatter Zone
+            <p>
+            <p>
+                <a href="~//Welding/WM/" class="btn btn-primary btn-sm">Rewelds Top &raquo;</a>
+                analyse your prio spots Reweld
+            <p>
+            <p>
+                <a href="~//Welding/WM/" class="btn btn-primary btn-sm">Process Stability&raquo;</a>
+                Analyse your prio spots descending Process Stability
+            <p>
+            <p>
+                <a href="~//Welding/WM/" class="btn btn-primary btn-sm">D Alerts&raquo;</a>
+                Analyse your D Alerts
+            <p>
+            <p>
+                <a href="~//Welding/WM/" class="btn btn-primary btn-sm">Q Alerts&raquo;</a>
+                Analyse your Q Alerts
+            <p></p>
+
+
+        </div>
+        <p></p>
 
 
