--- a/EqUiWebUi/Areas/Welding/Views/Qteam/rt_ExtraControles.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Qteam/rt_ExtraControles.cshtml
@@ -14,10 +14,11 @@
     columns.Add(c => c.plannummer).Titled("plannummer").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c.typecontrole).Titled("TypeControle");
     columns.Add(c => c.lastinspectiontime).Titled("lastinspectiontime");
+    columns.Add(c => c.NPTOwner).Titled("NPTOwner");
 
 
 }).Filterable(
-).Sortable().RowCss(c => (c.time_uitadaptief.GetValueOrDefault() < System.DateTime.Now.AddHours(-8)) ? "ani_PulseRed" : "ani_PulseBlueRepeat")
+).Sortable().RowCss(c => (c.lastinspectiontime.GetValueOrDefault() < System.DateTime.Now.AddHours(-4)) ? "ani_PulseRed" : "ani_PulseBlueRepeat")
 
 
 
