--- a/EqUiWebUi/Areas/Welding/Views/WM/_WeldFaultprotocol.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/WM/_WeldFaultprotocol.cshtml
@@ -26,7 +26,7 @@
 }).Filterable().Sortable().Pageable(pager =>
 {
 
-}).Css("table-hover").RowCss(model => model.breakdownTime >= 5 ? "ani_PulseRed" : "")
+}).Css("table-hover").RowCss(model => model.breakdownTime >= 10 ? "ani_PulseRed" : "")
 
 @section scripts{
     <script src="~/node_modules/jquery-jeditable/dist/jquery.jeditable.min.js"></script>
@@ -37,7 +37,7 @@
         $("#allcontent").removeClass("container");
 
         //subscribe to row clicked events
-        $('[data-name="WeldFaultProtocol"]').mvcgrid({
+        $('[data-name="WeldFaultprotocol"]').mvcgrid({
             rowClicked: function (row, data, e) {
                 return;
 
