--- a/EqUiWebUi/Areas/VASC/Views/vasc/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/vasc/Index.cshtml
@@ -94,6 +94,6 @@
 
     <div class="card-body">
         @MyHtmlHelpers.EquiLink("/VASC/Breakdown/GetJobs", "fas fa-vial", "Rtjobs", helperText: "")
-        @MyHtmlHelpers.EquiLink("/VASC/Breakdown/GetBreakdowns", "fas fa-vial", "RtjobBreakdown", helperText: "")
+        @MyHtmlHelpers.EquiLink("/VASC/Breakdown/GetJobs?hasBreakdowns=true", "fas fa-vial", "RtjobBreakdown", helperText: "")
     </div>
 </div>
