--- a/EqUiWebUi/Areas/VASC/Views/Breakdown/GetJobs.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/Breakdown/GetJobs.cshtml
@@ -11,7 +11,7 @@
     <div class="input-group mb-3 col-3">
         <input type="number" class="form-control" id="bodynum">
         <div class="input-group-append">
-            <span class="input-group-text btn" id="btnGet">Find body</span>
+            <span class="btn btn-primary" id="btnGet">Find body</span>
         </div>
     </div>
 }
@@ -25,7 +25,8 @@
         $("#allcontent").removeClass("container");
 
         function loadGrid() {
-            $('[data-name="rtjobGrid"]').mvcgrid({
+            $('[data-name= "rtjobGrid"]').html("<i class='fa fa-spinner fa-pulse fa-4x fa-fw'></i>");
+            $('[data-name= "rtjobGrid"]').mvcgrid({
                 sourceUrl: '@Url.Action("_getJobs")', // Grid source url string
                     data: {
                         bodyNo: $('#bodynum').val(),
@@ -33,8 +34,12 @@
                     },
                 requestType: 'get', // Ajax grid request type
                 reload: true, // Grid reload indicator
+                reloadEnded: function () {
+                   $('#btnGet').removeClass('disabled');
+                },
                 reloadFailed: function (result) {
                     console.log(result);
+                    $('#btnGet').removeClass('disabled');
                     $('[data-name="rtjobGrid"]').html("<div class='alert alert-danger'>Error while loading!! </div>");
                 }
              });
@@ -42,7 +47,7 @@
 
         //if in bodynum mode wait for click
         $("#btnGet").click(function () {
-            $(this).prop("disabled", true);
+            $('#btnGet').addClass('disabled');
             loadGrid();
         });
 
