Ploegrapport settings can now be set

--- a/EqUiWebUi/Areas/Gadata/Views/Table/PloegRapportWebgrid.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/PloegRapportWebgrid.cshtml
@@ -9,13 +9,19 @@
 
 @*box to change ploegrapport settings*@
 <small class="form-text text-muted">PloegRapportSettings</small>
-<div class="input-group mb-3 col-3">
+<div class="input-group input-group-sm col-2">
+    <div class="input-group-prepend">
+        <span class="input-group-text">minSumOfDownTime</span>
+    </div>
     <input type="number" class="form-control" id="minSumOfDownTime" value=@ViewBag.minSumOfDownTime>
     <div class="input-group-append">
         <span class="btn btn-primary" id="btnSet">Set</span>
     </div>
 </div>
-<div class="input-group mb-3 col-3">
+<div class="input-group input-group-sm mb-3 col-2">
+    <div class="input-group-prepend">
+        <span class="input-group-text">minCountOfDownTime</span>
+    </div>
     <input type="number" class="form-control" id="minCountOfDownTime" value=@ViewBag.minCountOfDownTime>
     <div class="input-group-append">
         <span class="btn btn-primary" id="btnSet">Set</span>
@@ -105,6 +111,17 @@
         //on modal close
         $('#MyModal').on('hidden.bs.modal', function (e) {
             $('#MyModal').html("<div class='card-body'><i class='fa fa-spinner fa-pulse fa-4x fa-fw text-white' ></i ><span class='sr-only'>Loading...</span></div >");
+        });
+
+        //function to change ploegrapport parameters.
+        $("#btnSet").click(function () {
+            $('[data-name="PloegRapportGrid"]').mvcgrid({
+                reload: true, // Grid reload indicator
+                data: {
+                    minSumOfDownTime: $('#minSumOfDownTime').val(),
+                    minCountOfDownTime: $('#minCountOfDownTime').val()
+                }
+            });
         });
 
         //full with screen
