--- a/EqUiWebUi/Areas/Welding/Views/TeardownTeam/_TDTResults.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/TeardownTeam/_TDTResults.cshtml
@@ -11,7 +11,7 @@
 
 {
 
-
+    // temperary old working data => must renewal this to new tdt schema
     columns.Add(c => c.Date).Titled("TeardownDate").InitialSort(GridSortOrder.Desc);
     columns.Add(c => c.Model).Titled("Model");
     columns.Add(c => c.Number).Titled("SpoNumber");
