--- a/EqUiWebUi/Areas/Welding/Views/Qteam/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Qteam/Index.cshtml
@@ -34,7 +34,7 @@
 
     <p></p>
 
-    @MyHtmlHelpers.EquiLink("/Welding/Qteam/rt_AutoWorkFlowULPlans", "fas fa-tachometer-alt", "Auto Plannen ", helperText: "Automatische lijst met de Ultralog plannen laatst uitgevoerd")
+    @MyHtmlHelpers.EquiLink("/Welding/Qteam/_Plans", "fas fa-tachometer-alt", "Auto Plannen ", helperText: "Automatische lijst met de Ultralog plannen laatst uitgevoerd")
 
 </div>
 <p></p>
