--- a/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
@@ -19,7 +19,6 @@
 
     <p></p>
     @MyHtmlHelpers.EquiLink("/Welding/WM/TV", "far fa-file-alt", "TV", helperText: "Qis system, live weldfaults factory, online timers")
-
     <p></p>
     @MyHtmlHelpers.EquiLink("/Welding/WM/", "far fa-file-alt", "Welding Master Interventions ---underconstruction---", helperText: "List up a intervention")
 
@@ -30,7 +29,7 @@
     <p></p>
     @MyHtmlHelpers.EquiLink("/Welding/WM/", "far fa-file-alt", " All D alerts ---under construction---", helperText: "Follow up all D alerts")
     <p></p>
-    @MyHtmlHelpers.EquiLink("/Welding/WM/", "far fa-file-alt", " All Q Alerts ---under construction---", helperText: "Follow ip all Q alerts ")
+    @MyHtmlHelpers.EquiLink("/Welding/WM/", "far fa-file-alt", " All Q Alerts ---under construction---", helperText: "Follow up all Q alerts ")
 
 
     @*voorbeeld interne link*@
@@ -41,7 +40,7 @@
     <p>
     <p>
 
-        <a href="~/Welding/WM/WeldFaultTOP10" class="btn btn-primary btn-sm">WeldFaultAnalyse Top10 langste storingen &raquo;</a>
+        <a href="~/Welding/WM/WeldFaultIndex" class="btn btn-primary btn-sm">WeldFaultAnalyse  storingen &raquo;</a>
         Weldfaultprotocol ---under contruction---
     <p>
     <p>
