--- a/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
@@ -35,12 +35,12 @@
     @*voorbeeld interne link*@
     <p>
     <p>
-        <a href="~/vwsc/vwsc/rt_job" class="btn btn-primary btn-sm">WeldData Job &raquo;</a>
+        <a href="~/Welding/JobData/_rt_job" class="btn btn-primary btn-sm">WeldData Job &raquo;</a>
         WeldData Job Analyser
     <p>
     <p>
 
-        <a href="~/Welding/WM/WeldFaultIndex" class="btn btn-primary btn-sm">WeldFaultAnalyse  storingen &raquo;</a>
+        <a href="~/Welding/WM/_rt_alarm" class="btn btn-primary btn-sm">WeldFaultAnalyse  storingen &raquo;</a>
         Weldfaultprotocol ---under contruction---
     <p>
     <p>
